Remove dependence on realpath; Update build.sh to account for CMAKE_BUILD_TYPE, GENERATOR and BUILD_SHARED_LIBS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,8 @@ install(
 
 install(
   FILES ${PROJECT_SOURCE_DIR}/LICENSE
-  DESTINATION share/<PKG>)
+  DESTINATION share/<PKG>
+  RENAME LICENSE.<PKG>)
 
 # TESTS
 
