Add integration with hunter for 3p deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,21 +2,56 @@
 
 cmake_minimum_required(VERSION 3.0)
 
-project(<PKG>)
+## set up hunter for deps
 
-set(ver_maj 0)
-set(ver_min 1)
-set(ver_patch 0)
-set(ver_string ${ver_maj}.${ver_min}.${ver_patch})
+set(ENV{HUNTER_ROOT} ${CMAKE_CURRENT_SOURCE_DIR}/.hunter)
+string(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "Debug" _is_dbg)
+if (_is_dbg)
+  set(HUNTER_CONFIGURATION_TYPES Debug)
+else()
+  set(HUNTER_CONFIGURATION_TYPES Release)
+endif()
+set(HUNTER_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
+include(cmake/HunterGate.cmake)
+HunterGate(
+  URL "https://github.com/ruslo/hunter/archive/v0.19.121.tar.gz"
+  SHA1 "4cf307799ec543084dd5bada002feea066e8c203")
+
+## info
+
+macro(msg m)
+  message("  == [<PKG>] ==  ${m}")
+endmacro(msg)
+
+## set up project
+
+project(<PKG> LANGUAGES C CXX VERSION 0.1.1)
+
+## set up dependencies
+
+include(cmake/deps.cmake)
+
+# eg.
+# set(deps libuv::uv)
+set(deps )
+build_deps("${deps}")
+
+## set to export explicit exports only
 
 set(CMAKE_C_VISIBILITY_PRESET hidden)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
-set(PROJECT_VERSION ${ver_string})
+## set up RPATHs
 
-macro(msg m)
-  message("## [<PKG>] ${m}")
-endmacro(msg)
+if (UNIX)
+  if(APPLE)
+    set(CMAKE_INSTALL_NAME_DIR "@rpath/")
+  else()
+    set(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib")
+  endif()
+endif(UNIX)
+
+## set up sources
 
 msg("Got project source dir: ${PROJECT_SOURCE_DIR}")
 
@@ -27,7 +62,11 @@ file(GLOB_RECURSE src_files ${PROJECT_SOURCE_DIR}/src/*.c ${PROJECT_SOURCE_DIR}/
 msg("Got export hdrs: ${export_hdr}")
 msg("Got src files: ${src_files}")
 
-add_library(<PKG> ${src_files})
+## set up library
+
+add_library(<PKG> ${src_files} ${export_hdr})
+
+## setup build flags (public and private)
 
 if (BUILD_SHARED_LIBS)
   set(build_flag BUILDING_<PKGUPPER>_SHARED)
@@ -38,7 +77,7 @@ else()
 endif()
 
 if (BUILD_SHARED_LIBS)
-  set_target_properties(<PKG> PROPERTIES VERSION ${ver_string} SOVERSION ${ver_maj})
+  set_target_properties(<PKG> PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
 endif()
 
 target_compile_definitions(
@@ -47,10 +86,10 @@ target_compile_definitions(
     ${pub_build_flag}
   PRIVATE
     ${build_flag}
-    <PKGUPPER>_VER_MAJ=${ver_maj}
-    <PKGUPPER>_VER_MIN=${ver_min}
-    <PKGUPPER>_VER_PATCH=${ver_patch}
-    <PKGUPPER>_VER_STRING=${ver_string})
+    <PKGUPPER>_VER_MAJ=${PROJECT_VERSION_MAJOR}
+    <PKGUPPER>_VER_MIN=${PROJECT_VERSION_MINOR}
+    <PKGUPPER>_VER_PATCH=${PROJECT_VERSION_PATCH}
+    <PKGUPPER>_VER_STRING=${PROJECT_VERSION})
 
 target_include_directories(
   <PKG>
@@ -58,7 +97,9 @@ target_include_directories(
   PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/export>
          $<INSTALL_INTERFACE:include>)
 
-target_link_libraries(<PKG> )
+## link
+
+target_link_libraries(<PKG> PRIVATE ${deps})
 
 #target_compile_features(
 #  <PKG>
@@ -68,11 +109,13 @@ target_link_libraries(<PKG> )
 #  cxx_auto_type
 #  cxx_static_assert)
 
+## configure exports
+
 configure_file(
   cmake/<PKG>Config.cmake.in
   ${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/<PKG>Config.cmake @ONLY)
 
-# INSTALL
+## set up install
 
 export(
   TARGETS <PKG>
@@ -80,7 +123,7 @@ export(
 
 export(PACKAGE <PKG>)
 
-# install configs
+## install configs
 
 install(
   TARGETS <PKG>
@@ -111,15 +154,16 @@ install(
   DESTINATION share/<PKG>
   RENAME LICENSE.<PKG>)
 
-# TESTS
+install_deps("${deps}" INCLUDE_HEADERS) # or EXCLUDE_HEADERS
+
+## tests
 
 include(tests.cmake)
 
-# Packaging
+## packaging
 
 set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
 set(CPACK_PACKAGE_VENDOR "Aaditya Kalsi")
 set(CPACK_PACKAGE_CONTACT "akalsi.dev@gmail.com")
 set(CPACK_STRIP_FILES 1)
 include(CPack)
-
