--- a/cmake/projConfig.cmake.in
+++ b/cmake/projConfig.cmake.in
@@ -23,4 +23,10 @@ get_target_property(_tgt_type <PKG> TYPE)
 string(COMPARE EQUAL "${_tgt_type}" "STATIC_LIBRARY" _is_static_lib)
 if (_is_static_lib)
   # include dependencies; static libs are linked to their deps publicly
+  set(_deps @deps@)
+  foreach(_dep ${_deps})
+    string(REPLACE ":" ";" _pkg_name ${_dep})
+    list(GET _pkg_name 0 _pkg_name)
+    find_package(${_pkg_name} CONFIG)
+  endforeach()
 endif()
