--- a/tests/install/CMakeLists.txt
+++ b/tests/install/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB src_files ${TESTS_DIR}/*.c ${TESTS_DIR}/*.cpp)
 set(src_dir ${CMAKE_CURRENT_SOURCE_DIR}/_source)
 file(COPY ${src_files} DESTINATION ${src_dir})
 
-find_package(<PKG>)
+find_package(<PKG> CONFIG REQUIRED)
 
 file(GLOB src_files ${src_dir}/*.c ${src_dir}/*.cpp)
 
@@ -20,7 +20,7 @@ target_include_directories(
   tests_install
   PRIVATE ${TESTS_DIR})
 
-target_link_libraries(tests_install <PKG>)
+target_link_libraries(tests_install <PKG>::<PKG>)
 
 add_custom_target(
   tests_run
