--- a/cmake/proj-config.cmake.in
+++ b/cmake/proj-config.cmake.in
@@ -15,7 +15,7 @@ set(<PKGUPPER>_INCLUDE_DIRS include)
 
 # Our library dependencies (contains definitions for IMPORTED targets)
 if(NOT TARGET <PKG> AND NOT <PKGUPPER>_BINARY_DIR)
-  include("${<PKGUPPER>_CMAKE_DIR}/<PKG>Targets.cmake")
+  include("${<PKGUPPER>_CMAKE_DIR}/<PKG>-targets.cmake")
 endif()
 
 # These are IMPORTED targets created by <PKG>Targets.cmake
