--- a/cmake/proj-config.cmake.in
+++ b/cmake/proj-config.cmake.in
@@ -1,4 +1,4 @@
-# <PKG>Config.cmake
+# <PKG>-config.cmake
 
 # - Config file for the <PKG> package
 # It defines the following variables
@@ -18,7 +18,7 @@ if(NOT TARGET <PKG> AND NOT <PKGUPPER>_BINARY_DIR)
   include("${<PKGUPPER>_CMAKE_DIR}/<PKG>-targets.cmake")
 endif()
 
-# These are IMPORTED targets created by <PKG>Targets.cmake
+# These are IMPORTED targets created by <PKG>-targets.cmake
 set(<PKGUPPER>_LIBRARIES <PKG>)
 set(<PKGUPPER>_EXECUTABLE )
 
