Fresh new template-project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,33 +14,29 @@ project(
 include(cmake/vcpkg-toolchain.cmake)
 include(cmake/proj-helpers.cmake)
 
-lsprn("Project root:" "${PROJECT_SOURCE_DIR}")
-
 ## Set the CMake C++ compiler standard
 # set(CMAKE_CXX_STANDARD 11)
 
 ## Find dependencies
 cm_find_pkg(Threads REQUIRED)
 
+lsprn("Project root:" "${PROJECT_SOURCE_DIR}")
+
 ## Add library
 cm_add_library(NAME <PKG> VERSION 0.1.1)
-
-## Dependency link
 target_link_libraries(<PKG> PUBLIC Threads::Threads)
 
 ## Executable
 cm_add_executable(NAME <PKG>exec VERSION 1.0.1)
-
-## Dependency link
 target_link_libraries(<PKG>exec PRIVATE <PKG>)
 
 ## Tests
 cm_add_tests(NAME <PKG>)
 
-add_dependencies(tests <PKG>exec)
-
+## Installation
 cm_config_install_exports()
 
+## License
 install(
   FILES ${PROJECT_SOURCE_DIR}/LICENSE
   DESTINATION share/<PKG>
